crates/testing/src/snapshots/mcp_gitmem_testing__conformance__import_fixture_notes.snap
---
source: crates/testing/src/lib.rs
assertion_line: 449
expression: canonical
---
- id: mem_alpha_fixture
  title: alpha
  type: note
  tags:
    - a
    - x
    - "project:default"
- id: mem_beta_fixture
  title: beta
  type: fact
  tags:
    - b
    - "project:default"
- id: mem_gamma_fixture
  title: gamma
  type: note
  tags:
    - a
    - c
    - "project:default"
