crates/testing/src/snapshots/mcp_gitmem_testing__conformance__search_slim_items.snap
---
source: crates/testing/src/lib.rs
assertion_line: 364
expression: slim
---
- title: gamma
  type: note
  tags:
    - a
    - c
    - "project:default"
- title: beta
  type: fact
  tags:
    - b
    - "project:default"
- title: alpha
  type: note
  tags:
    - a
    - x
    - "project:default"
